fix: changed package name & others