@@ -1,31 +1,31 @@
-//file:noinspection GroovyAssignabilityCheck
 plugins {
     id 'java-library'
     id 'maven-publish'
 }
+
 
 group = 'me.tr'
 version = '2.0.1'
 
 publishing {
     publications {
-        publishToMaven(MavenPublication) {
-            from components['java']
+        maven(MavenPublication) {
+            from components.java
         }
     }
 }
 
 repositories {
     mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
     implementation('me.tr:logger:2.2.1')
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.2')
+    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
 }
 
-test {
-    jvmArgs += [
-        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-        '--add-opens', 'me.tr.serializer/me.tr.serializer=ALL-UNNAMED'
-    ]
+tasks.test {
+    failOnNoDiscoveredTests = false
 }
